--- a/src/apps/weather/components/RootComponent/view.html
+++ b/src/apps/weather/components/RootComponent/view.html
@@ -1,6 +1,6 @@
 <div class="weather-info d-lg-flex flex-wrap" id="weather_info">
   <div class="weather-city mr-auto mt-2 mt-lg-0">
-    <weatherComponent></weatherComponent>
-    <temperatureComponent></temperatureComponent>
+    <WeatherComponent></WeatherComponent>
+    <TemperatureComponent></TemperatureComponent>
   </div>
 </div>
